Completed function to add links between assets and other general fixes to make the code more readable

--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -320,8 +320,8 @@ label span.label-text {
   color: #555;
 }
 .legend i {
-  width: 18px;
-  height: 18px;
+  width: 15px;
+  height: 15px;
   float: left;
   margin-right: 8px;
   opacity: 0.7;
